--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
-              <!-- jtstl -->
+        <!-- jtstl -->
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
@@ -51,7 +51,14 @@
             <artifactId>spring-core</artifactId>
             <version>${spring.version}</version>  
         </dependency>  
-  
+        
+        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.2.Final</version>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
